# ITE-data-sciene-assignment

./: README.md  pyproject.toml
code/: data_cleaning_and_processing.ipynb  exhibitors_profile_analysis.ipynb  tests.ipynb  visitors_profile_analysis.ipynb
code/matching_model/: recommend_exhibitors_by_answers.ipynb  recommend_exhibitors_by_visitor_email.ipynb  recommend_visitors_by_exhibitorID.ipynb  utils.py
source/: exhibitor_categories.csv  exhibitors.csv  processed_exhibitors_categories.csv  processed_visitors_answers.csv  visitors.csv  visitors_answers.csv  visitors_questions.csv
