[tool.poetry]
name = "ite project"
version = "0.1.0"
description = ""
authors = ["tasheer10 <tasheerhussain10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
